--- a/frontend/02-flex-sideby-side.html
+++ b/frontend/02-flex-sideby-side.html
@@ -1,9 +1,12 @@
-<section class="two-col">
-    <div class="two-col-text">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-    </div>
 
-    <img src="image.jpg" alt="section image" class="two-col-img">
+    <section>
+    <h1>Example</h1>
+    <div class="section-row">
+        <div class="text-block">
+            <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisc.
+            </p>
+        </div>
+        <img src="try.jpg" alt="firstimage" />
+    </div>
 </section>
