--- a/frontend/04-feature-card.html
+++ b/frontend/04-feature-card.html
@@ -4,3 +4,14 @@
     <h3></h3>
     <p>.</p>
   </div>
+
+  <div class="feature-card">
+    <h3></h3>
+    <p>.</p>
+  </div>
+
+  <div class="feature-card">
+    <h3></h3>
+    <p>.</p>
+  </div>
+</section>
