--- a/frontend/06-searchbar.html
+++ b/frontend/06-searchbar.html
@@ -25,7 +25,7 @@
 
 
     <div class="hero-right">
-        <div id="">
+        <div id="enter name here">
             <h2></h2>
         </div>
     </div>
