--- a/frontend/06-searchbar.html
+++ b/frontend/06-searchbar.html
@@ -5,13 +5,13 @@
         <h1 class="title-line-1">Your Personalised Carbon Footprint Calculator</h1>
 
 
-        <label></label>
+        <label>How many miles do you drive per week?</label>
         <select class="location-input" id="miles">
-            <option </option>
-            <option </option>
-            <option </option>
-            <option </option>
-            <option </option>
+            <option value="1"></option>
+            <option value="2"></option>
+            <option value="3"></option>
+            <option value="4"></option>
+            <option value="5"></option>
         </select>
 
 <br>
