--- a/frontend/06-searchbar.html
+++ b/frontend/06-searchbar.html
@@ -1,4 +1,5 @@
 
+
 <section class="dashboard-hero">
 
     <div class="hero-left">
@@ -6,7 +7,7 @@
 
 
         <label>How many miles do you drive per week?</label>
-        <select class="location-input" id="miles">
+        <select class="enterhere" id="">
             <option value="1"></option>
             <option value="2"></option>
             <option value="3"></option>
