--- a/frontend/06-searchbar.html
+++ b/frontend/06-searchbar.html
@@ -1,33 +1,25 @@
-
-
 <section class="dashboard-hero">
 
     <div class="hero-left">
         <h1 class="title-line-1">Your Personalised Carbon Footprint Calculator</h1>
 
-
         <label>How many miles do you drive per week?</label>
-        <select class="enterhere" id="">
-            <option value="1"></option>
-            <option value="2"></option>
-            <option value="3"></option>
-            <option value="4"></option>
-            <option value="5"></option>
+        <select class="y" id="bleh">
+            <option value="1">aga</option>
+            <option value="2">aga</option>
+            <option value="3">aga</option>
+            <option value="4">aga</option>
+            <option value="5">aga</option>
         </select>
 
-<br>
+        <br><br>
 
-
-<br>        <button class="submit-button">Submit</button>
-
-
+        <button class="submit-button">Submit</button>
     </div>
 
-
-
     <div class="hero-right">
-        <div id="enter name here">
-            <h2></h2>
+        <div id="" class="x">
+            <h2>Your result will appear here</h2>
         </div>
     </div>
 
